# pixray

./: .gitmodules  pyproject.toml
examples/: out.html  run_examples.py
models/: .gitignore
pixray_module/: __init__.py  pixray.py  slip.py  util.py  vdiff.py
pixray_module/models/: .gitignore
