[tool.poetry]
name = "pixray-module"
version = "0.1.0"
description = ""
authors = ["mark-todd <markpeter.todd@hotmail.co.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
tqdm = "^4.64.1"
matplotlib = "^3.7.0"
braceexpand = "^0.1.7"
colorthief = "^0.2.1"
einops = "^0.6.0"
imageio = "^2.25.1"
ipython = "^8.10.0"
omegaconf = "^2.3.0"
pillow = "^9.4.0"
pyyaml = "^6.0"
scikit-learn = "^1.2.1"
scikit-image = "^0.19.3"
torch-tools = "^0.1.5"
cmake = "^3.25.2"
cssutils = "^2.6.0"
svgpathtools = "^1.6.0"
lpips = "^0.1.4"
sentence-transformers = "^2.2.2"
opencv-python = "^4.7.0.68"
pywavelets = "^1.4.1"
timm = "^0.6.12"
resmem = "^1.1.6"
pytorch-wavelets = {git = "https://github.com/fbcotter/pytorch_wavelets"}
aphantasia = {git = "https://github.com/pixray/aphantasia"}
clip = {git = "https://github.com/openai/CLIP"}
taming-transformers = {git = "https://github.com/bfirsh/taming-transformers"}
perlin-numpy = {git = "https://github.com/pvigier/perlin-numpy.git"}
pytest = "^7.2.1"
pytorch-lightning = "^1.9.1"
basicsr = "^1.4.2"
ftfy = "^6.1.1"
kornia = "0.6.2"
torch-optimizer = "^0.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
venvPath="./"
venv=".venv"
